Made the buttons, chose the images using for each function. Made two images move in and out. Made a collapse/expand button, going to have info about the cat in there. And made a button for show/hide, that will be another image. Need to fix the grid, since the masthead got pushed to the right. Also need to make toggle.

--- a/css/main.css
+++ b/css/main.css
@@ -83,107 +83,6 @@ div {
   padding: 3rem 0;
 }
 
-.circle {
-  height: 100px;
-  top: calc(50% - 50px);
-  width: 100px;
-
-  background-color: orange;
-  right: 1em;
-}
-
-.js-circle-bounce {
-  -webkit-animation: circle-bounce 1s ease-out;
-  animation: circle-bounce 1s ease-out;
-}
-
-@-webkit-keyframes circle-bounce {
-    0% {
-        top: 0.5em;
-        right: 2em;
-    }
-    20% {
-        top: 2.5em;
-        right: 4em;
-    }
-    40% {
-        top: 1em;
-        right: 6em;
-    }
-    60% {
-        top: 1.7em;
-        right: 8em;
-    }
-    80% {
-        top: 1.1em;
-        right: 10em;
-    }
-    100% {
-        top: 1.4em;
-        right: 12em;
-    }
-}
-
-@keyframes circle-bounce {
-    0% {
-        top: 0.5em;
-        right: 2em;
-    }
-    20% {
-        top: 2.5em;
-        right: 4em;
-    }
-    40% {
-        top: 1em;
-        right: 6em;
-    }
-    60% {
-        top: 1.7em;
-        right: 8em;
-    }
-    80% {
-        top: 1.1em;
-        right: 10em;
-    }
-    100% {
-        top: 1.4em;
-        right: 12em;
-    }
-}
-
-.list {
-  bottom: 1em;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  right: 1em;
-  top: 1em;
-  width: 250px;
-  border: 1px solid #ccc;
-  overflow: hidden;
-  overflow-y: auto;
-}
-
-.list li {
-  padding: 0.5em;
-  background-color: plum;
-  border: 1px solid mediumpurple;
-  color: mediumpurple;
-  height: 1em;
-  position: relative;
-}
-
-.list p {
-  position: absolute;
-  top: -20%;
-}
-
-.js-li-push {
-  -webkit-animation: li-push 0.3s ease-out;
-  animation: li-push 0.3s ease-out;
-  overflow: hidden;
-  }
-
 @-webkit-keyframes li-push {
     0% {
         max-height: 0;
